src/test/compile-fail/liveness-issue-2163.rs
fn main(_s: ~[str]) {
    let a: ~[int] = ~[];
    do vec::each(a) { |_x| //! ERROR not all control paths return a value
    }
}
